# pulse_deadtime_fix

./: .cruft.json  .gitignore  MANIFEST.in  README.rst  pyproject.toml  tox.ini
.github/: ci_tests.yml
.github/workflows/: ci_tests.yml
docs/: conf.py  index.rst
licenses/: LICENSE.rst
pulse_deadtime_fix/: core.py  simulate.py
pulse_deadtime_fix/tests/: test_core.py  test_simulate.py
