[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=6.2",
  "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "pulse_deadtime_fix"
description = "Fix dead time distortion of pulse profiles"
requires-python = ">=3.9"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "licenses/LICENSE.rst" }
authors = [
  { name = "Matteo B", email = "matteo@matteobachetti.it" },
]
dependencies = ["numpy", "astropy", "stingray", "numba"]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-doctestplus",
    "pytest-cov"
]
docs = [
    "sphinx",
    "sphinx-automodapi",
]
[project.urls]
repository = "https://github.com/matteobachetti/pulse_deadtime_fix"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["pulse_deadtime_fix._dev*"]

[tool.setuptools_scm]
write_to = "pulse_deadtime_fix/_version.py"

[tool.pytest.ini_options]
testpaths = [
  "pulse_deadtime_fix",
  "docs",
]
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "--doctest-rst"

[tool.coverage.run]
omit = [
 "pulse_deadtime_fix/__init*",
 "pulse_deadtime_fix/conftest.py",
 "pulse_deadtime_fix/*setup_package*",
 "pulse_deadtime_fix/tests/*",
 "pulse_deadtime_fix/*/tests/*",
 "pulse_deadtime_fix/extern/*",
 "pulse_deadtime_fix/version*",
 "*/pulse_deadtime_fix/__init*",
 "*/pulse_deadtime_fix/conftest.py",
 "*/pulse_deadtime_fix/*setup_package*",
 "*/pulse_deadtime_fix/tests/*",
 "*/pulse_deadtime_fix/*/tests/*",
 "*/pulse_deadtime_fix/extern/*",
 "*/pulse_deadtime_fix/version*",
]

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about packages we have installed
  "except ImportError",
  # Don't complain if tests don't hit assertions
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain about script hooks
  "def main(.*):",
  # Ignore branches that don't pertain to this version of Python
  "pragma: py{ignore_python_version}",
  # Don't complain about IPython completion helper
  "def _ipython_key_completions_",
  # typing.TYPE_CHECKING is False at runtime
  "if TYPE_CHECKING:",
  # Ignore typing overloads
  "@overload",
]
